# SNS_SERVER/controllers/user.controller.go
@@ -35,14 +35,14 @@ func NewUserController(userservice services.UserService, googleOauthConfig *oaut
 
 // RegisterUser godoc
 //
-//	@Summary	sign up regular user
-//	@Tags			register
+//	@Summary		sign up regular user
+//	@Tags			register regular user
 //	@Description	write user informations to mongodb
 //	@Accept			json
 //	@Produce		json
-//	@Param user body models.User true "User Data"
-//	@Success	200	{string}	success
-//	@Router		/register/create [post]
+//	@Param			user	body		models.User	true	"User Data"
+//	@Success		200		{string}	success
+//	@Router			/register/create [post]
 func (uc *UserController) CreateUser(ctx *gin.Context) {
 	var user models.User
 	if err := ctx.ShouldBindJSON(&user); err != nil {
@@ -56,9 +56,19 @@ func (uc *UserController) CreateUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"message": "success"})
 }
 
+// GetUser godoc
+//
+//	@Summary		get user data
+//	@Tags			register regular user
+//	@Description	get regular user informations to mongodb
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"regular_user_id"
+//	@Success		200	{object}	models.User
+//	@Router			/register/get/{id} [get]
 func (uc *UserController) GetUser(ctx *gin.Context) {
-	username := ctx.Param("name")
-	user, err := uc.UserService.GetUser(&username)
+	id := ctx.Param("id")
+	user, err := uc.UserService.GetUser(&id)
 	if err != nil {
 		ctx.JSON(http.StatusBadGateway, gin.H{"message": err.Error()})
 		return
@@ -66,6 +76,15 @@ func (uc *UserController) GetUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, user)
 }
 
+// GetAllUser godoc
+//
+//	@Summary		get user data
+//	@Tags			register regular user
+//	@Description	get all regular user informations to mongodb
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	[]models.User
+//	@Router			/register/getall [get]
 func (uc *UserController) GetAll(ctx *gin.Context) {
 	users, err := uc.UserService.GetAll()
 	if err != nil {
@@ -75,6 +94,16 @@ func (uc *UserController) GetAll(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, users)
 }
 
+// UpdateUser godoc
+//
+//	@Summary		update regular user data
+//	@Tags			register regular user
+//	@Description	update regular user informations to mongodb
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		models.User	true	"User data"
+//	@Success		200		{string}	success
+//	@Router			/register/update [patch]
 func (uc *UserController) UpdateUser(ctx *gin.Context) {
 	var user models.User
 	if err := ctx.ShouldBindJSON(&user); err != nil {
@@ -88,15 +117,36 @@ func (uc *UserController) UpdateUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"message": "success"})
 }
 
+// DeleteUser godoc
+//
+//	@Summary		delete regular user data
+//	@Tags			register regular user
+//	@Description	delete user information in mongodb
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"regular_user_id"
+//	@Success		200	{string}	success
+//	@Router			/register/delete/{id} [delete]
 func (uc *UserController) DeleteUser(ctx *gin.Context) {
-	username := ctx.Param("name")
-	if err := uc.UserService.DeleteUser(&username); err != nil {
+	id := ctx.Param("id")
+	if err := uc.UserService.DeleteUser(&id); err != nil {
 		ctx.JSON(http.StatusBadGateway, gin.H{"message": err.Error()})
 		return
 	}
 	ctx.JSON(http.StatusOK, gin.H{"message": "success"})
 }
 
+// SignIn godoc
+//
+//	@Summary		sign in regular user
+//	@Tags			sign in/out regular user
+//	@Description	sign in regular user
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		dto.SignInRequest	true	"regular login data"
+//	@Success		200		{string}	success
+//	@Header			200		{string}	Set-Cookie	"Session Cookie"
+//	@Router			/login/signin [post]
 func (uc *UserController) SignIn(ctx *gin.Context) {
 	var signInReq dto.SignInRequest
 	if err := ctx.ShouldBindJSON(&signInReq); err != nil {
@@ -120,6 +170,16 @@ func (uc *UserController) SignIn(ctx *gin.Context) {
 	}
 }
 
+// SignOut godoc
+//
+//	@Summary		sign out regular user
+//	@Tags			sign in/out regular user
+//	@Description	sign out regular user
+//	@Accept			json
+//	@Produce		json
+//	@Param			regular_user_session	header		string	true	"Session Cookie"
+//	@Success		200						{string}	success
+//	@Router			/login/signout [post]
 func (uc *UserController) SignOut(ctx *gin.Context) {
 	uuid, err := ctx.Cookie("regular_user_session")
 	if err != nil {
@@ -134,6 +194,16 @@ func (uc *UserController) SignOut(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"message": "success"})
 }
 
+// GoogleSignIn godoc
+//
+//	@Summary		sign up google user
+//	@Tags			sign in/out google user
+//	@Description	sign out google user
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{string}	success
+//	@Header			200	{string}	Set-Cookie	"Session Cookie"
+//	@Router			/login/glogin [get]
 func (uc *UserController) GoogleSignIn(ctx *gin.Context) {
 	url := uc.googleOauthConfig.AuthCodeURL(uc.oauthStateString)
 	ctx.Redirect(http.StatusTemporaryRedirect, url)
@@ -182,6 +252,16 @@ func (uc *UserController) GoogleSignInCallback(ctx *gin.Context) {
 	}
 }
 
+// GoogleSignOut godoc
+//
+//	@Summary		sign out google user
+//	@Tags			sign in/out google user
+//	@Description	sign out google user
+//	@Accept			json
+//	@Produce		json
+//	@Param			google_user_session	header		string	true	"Session Cookie"
+//	@Success		200					{string}	success
+//	@Router			/login/glogout [get]
 func (uc *UserController) GoogleSignOut(ctx *gin.Context) {
 	uuid, err := ctx.Cookie("google_user_session")
 	if err != nil {
@@ -201,10 +281,10 @@ func (uc *UserController) RegisterUserRoutes(rg *gin.RouterGroup) {
 
 	registerroute := rg.Group("/register")
 	registerroute.POST("/create", uc.CreateUser)
-	registerroute.GET("/get/:name", uc.GetUser)
+	registerroute.GET("/get/:id", uc.GetUser)
 	registerroute.GET("/getall", uc.GetAll)
 	registerroute.PATCH("/update", uc.UpdateUser)
-	registerroute.DELETE("/delete/:name", uc.DeleteUser)
+	registerroute.DELETE("/delete/:id", uc.DeleteUser)
 	loginroute := rg.Group("login")
 	loginroute.Use(sessions.Sessions("mysession", store))
 	loginroute.POST("/signin", uc.SignIn)
